--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ image: node:latest
 
 stages:          # List of stages for jobs, and their order of execution
   - test
+  - build image
  
 
 test-job:   # This job runs in the test stage.
@@ -30,6 +31,17 @@ test-job:   # This job runs in the test stage.
   script:
     - npm ci
     - npm run test
+  artifacts:
+    paths:
+      - my-report/
+
+build image:
+  image: docker
+  services:
+    - docker:dind
+  script:
+    - docker login registry.gitlab.com
+
 
 
 
