pipeline has been changed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ test-job:   # This job runs in the test stage.
   image: mcr.microsoft.com/playwright:v1.37.1-focal
   script:
     - npm ci
-    - npm run test_api
+    - npm run test_ui
   artifacts:
     paths:
       - my-report/
