--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,15 +22,14 @@ image: node:latest
 
 stages:          # List of stages for jobs, and their order of execution
   - test
-  - build image
+
  
 
 test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
-  image: mcr.microsoft.com/playwright:v1.37.1-focal
   script:
     - npm ci
-    - npm run test_ui
+    - npm run test_api
   artifacts:
     paths:
       - my-report/
