--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,13 @@ test-job:   # This job runs in the test stage.
     paths:
       - my-report/
 
+ build image:
+  image: docker
+  services:
+    - docker:dind
+  script:
+    - docker login registry.gitlab.com
+ 
 
 
 
