--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Laszlo Veres",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.37.1"
+    "@playwright/test": "1.39",
+    "@types/node": "^20.9.0"
   }
 }
