--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,10 +20,10 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright Tests
-      run: xvfb-run npx playwright test
+      run: xvfb-run npm run test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: my-report/
         retention-days: 30
