--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright Tests
-      run: xvfb-run npm run test
+      run: xvfb-run npm run test_ui
     - uses: actions/upload-artifact@v3
       if: always()
       with:
