--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,7 +19,7 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright UI tests
+    - name: Run Playwright Tests
       run: xvfb-run npm run test
     - uses: actions/upload-artifact@v3
       if: always()
