--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,6 +8,10 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    env:
+      MOVIEDB_ACCESS: yI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.l69bunZBw-Ifr69_oG-6GBIb0F7FUFUJ-taXP2lcM3c
+      MOVIEDB_PASS: hibihabi
+      MOVIEDB_USER: vlaco1984
     container:
       image: mcr.microsoft.com/playwright:v1.39.0-jammy
     steps:
