--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,10 +9,10 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     env:
-      MOVIEDB_ACCESS: yI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.l69bunZBw-Ifr69_oG-6GBIb0F7FUFUJ-taXP2lcM3c
-      MOVIEDB_APIKEY: d71a2265cfe64683adaeeb7ff4e6203e
-      MOVIEDB_PASS: hibihabi
-      MOVIEDB_USER: vlaco1984
+      MOVIEDB_ACCESS: ${{vars.MOVIEDB_ACCESS}}
+      MOVIEDB_APIKEY: ${{vars.MOVIEDB_APIKEY}}
+      MOVIEDB_PASS: ${{vars.MOVIEDB_PASS}}
+      MOVIEDB_USER: ${{vars.MOVIEDB_USER}}
     container:
       image: mcr.microsoft.com/playwright:v1.39.0-jammy
     steps:
