--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Playwright E2E and API Tests
 on:
   push:
     branches: [ main, master ]
@@ -8,6 +8,13 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    env:
+      MOVIEDB_ACCESS: ${{vars.MOVIEDB_ACCESS}}
+      MOVIEDB_APIKEY: ${{vars.MOVIEDB_APIKEY}}
+      MOVIEDB_PASS: ${{vars.MOVIEDB_PASS}}
+      MOVIEDB_USER: ${{vars.MOVIEDB_USER}}
+    container:
+      image: mcr.microsoft.com/playwright:v1.39.0-jammy
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -17,11 +24,11 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+    - name: Run Playwright Tests
+      run: xvfb-run npm run test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: my-report/
         retention-days: 30
