--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
+    - continue-on-error: true
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
