--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,15 +20,16 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-    - continue-on-error: true
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright UI Tests
       run: xvfb-run npm run test_ui
+      continue-on-error: true
     - name: Run Playwright API Tests
       run: npm run test_api
+      continue-on-error: true
     - uses: actions/upload-artifact@v3
       if: always()
       with:
